Add basic CRUD functionality for books
